# hbllm-core

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_REVIEW.md  Cargo.toml  Dockerfile  LICENSE  LICENSE.md  Makefile  README core.md  README.md  RUVECTOR_INTEGRATION_PLAN.md  SECURITY.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  hbllm.yaml.example  mkdocs.yml  nginx.conf  pyproject.toml  test_full_output.txt  test_moonshine_live.py  verify_hybrid_quant.py
.github/workflows/: ci.yml  deploy.yml  docs.yml
cognitive_checkpoints/step_2/: cognitive_stats.json  training_memory.json
config/: policies.yaml
deploy/k8s/: hbllm-core.yaml
docs/: contributing.md  index.md  robots.txt  security.md
docs/adr/: 0001-hbllm-core-architecture.md  0002-operational-architecture-and-governance.md  README.md
docs/api/: actions.md  benchmarks.md  brain-factory.md  brain-subsystems.md  data-pipeline.md  governance.md  memory.md  model.md  network.md  perception.md  plugins.md  rust-kernels.md  security.md  sentra.md  serving.md  tokenizer.md
docs/architecture/: adaptive-network.md  causality-and-compaction.md  cognitive-nodes.md  cognitive-subsystems.md  decision-gatekeeper.md  distributed-trust.md  embodiment.md  evaluation-loop.md  executive-brain-layer.md  human-control.md  memory-systems.md  message-bus.md  network-resilience.md  overview.md  self-model.md  sleep-cycle.md  telemetry-observability.md  voice-pipeline.md  web-research.md
docs/guides/: configuration.md  custom-nodes.md  deployment.md  migration_v0_2.md  plugins.md  quickstart.md  robotics-iot.md  training.md
docs/stylesheets/: extra.css
docs/zoning/: how-it-works.md  hybrid-quantization.md  lora-routing.md  weighted-domains.md
examples/: repl_agent.py  standalone_brain.py
grafana/alerting/: hbllm-alerts.yml
grafana/dashboards/: hbllm-api.json
hbllm/: __init__.py  _cli_app.py  backup.py  cli.py  config.py
hbllm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hbllm/actions/: __init__.py  agent_executor.py  api_node.py  browser_node.py  builtin_tools.py  complexity.py  confirmation.py  execution_node.py  fuzzy_node.py  iot_mqtt_node.py  logic_node.py  mcp_client_node.py  orchestrator.py  rollback.py  ros2_node.py  scheduler_tools.py  shell_node.py  tool_chain.py  tool_memory.py  tool_registry.py  tool_router.py
hbllm/benchmarks/: __init__.py  bench_cognitive.py  bench_dual_router.py  bench_http.py  eval_prm.py  eval_speculative.py  eval_tot.py  profiler.py  runner.py
hbllm/brain/: __init__.py  action_planner.py  action_schema.py  activity_digest.py  attention_manager.py  autonomous_learner.py  awareness.py  belief_store.py  brain_container.py  brain_context.py  capability_registry.py  cognitive_event.py  cognitive_interfaces.py  cognitive_metrics.py  cognitive_state.py  collective_node.py  competition_engine.py  concept_formation.py  confidence_estimator.py  constitutional_principles.py  context_fusion.py  context_window.py  contradiction_detector.py  critic_node.py  curiosity_node.py  decision_node.py  delegation_chain.py  dual_llm_router.py  emotion_engine.py  evaluation_node.py  event_queue.py  evidence.py  executive_controller.py  executive_cortex.py  experience_node.py  experiment_engine.py  factory.py  failure_analyzer.py  failure_analyzer_node.py  goal_manager.py  (+53 more)
hbllm/cli/: __init__.py  __main__.py  agent.py  export_dpo.py  train.py
hbllm/config/: __init__.py  brain_profile.py
hbllm/core/: __init__.py  constants.py
hbllm/data/: __init__.py  dataloader.py  downloader.py  interaction_miner.py  pipeline.py  scorer.py  sharder.py  synthesizer.py
hbllm/graph/: __init__.py  types.py
hbllm/hbpkg/: __init__.py  manifest.py  packager.py
hbllm/hcir/: __init__.py  abi.py  bytecode.py  cognitive_state.py  compiler.py  compiler_llm.py  context.py  counterfactual_planner.py  delta_transport.py  graph.py  identity.py  interpreter.py  learning_loop.py  optimizer.py  query.py  receipt.py  replay_debugger.py  snapshot.py  stdlib.py  stores.py  transactions.py  types.py  validation.py  workspace.py  world_kernel.py
hbllm/knowledge/: __init__.py  extractor.py  knowledge_base.py
hbllm/memory/: __init__.py  belief_graph.py  cache.py  concept_extractor.py  pool.py  (+20 more)
migrations/: env.py
rust/compute_kernel/: Cargo.toml
rust/compute_kernel/src/: lib.rs
rust/concept_extract/: Cargo.toml
rust/concept_extract/src/: lib.rs
rust/confidence/: Cargo.toml
rust/confidence/src/: lib.rs
rust/data_tools/: Cargo.toml
rust/data_tools/src/: clean.rs  dedup.rs  lib.rs  python.rs
rust/knowledge_graph/: Cargo.toml
rust/knowledge_graph/src/: lib.rs
rust/network_utils/: Cargo.toml
rust/network_utils/src/: lib.rs
rust/perception/: Cargo.toml
rust/perception/src/: change_detector.rs  lib.rs  preprocessing.rs
rust/policy_eval/: Cargo.toml
rust/policy_eval/src/: lib.rs
rust/semantic_search/: Cargo.toml
rust/semantic_search/src/: lib.rs
rust/tokenizer/: Cargo.toml
rust/tokenizer/src/: lib.rs  python.rs  trainer.rs  vocab.rs
semantic/: dense_vectors.npy  documents.json  hashes.json
test_workspace/: vocab.json
tests/: __init__.py  conftest.py  mock_llm.py  test_activity_digest.py  test_adaptive_context.py  test_adaptive_network.py  test_adr002_operational.py  test_advanced_cognitive.py  test_agent_cli.py  test_agentic_chains.py  test_api_endpoints.py  test_api_node.py  test_api_server.py  test_api_server_isolation.py  test_audio_streaming.py  test_audio_voice.py  test_autonomy.py  test_autonomy_loop.py  test_autonomy_watchers.py  test_backup.py  test_bargein.py  test_benchmarks.py  test_brain_cognitive_subsystems.py  test_brain_factory.py  test_brain_state.py  test_broca.py  test_business_metrics.py  test_byzantine_stress.py  test_causal_graph.py  test_change_detector.py  test_circuit_breaker.py  test_cluster_config.py  test_cognition_optimizer.py  test_cognitive_awareness.py  test_cognitive_flow.py  test_cognitive_training.py  test_collective.py  test_compaction.py  test_composite_learning_loop.py  test_composite_memory_system.py  (+184 more)
(+812 files in other folders)
