[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hbllm"
version = "0.1.0"
description = "HBLLM Core — Hierarchical Brain LLM cognitive architecture"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "HBLLM Team"},
]

dependencies = [
    # Core ML
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "tokenizers>=0.15.0",
    "sentencepiece>=0.2.0",
    "safetensors>=0.4.0",

    # Training
    "wandb>=0.16.0",
    "accelerate>=0.28.0",

    # Data
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    "zstandard>=0.22.0",

    # Reasoning Engines
    "z3-solver>=4.12.0",
    "scikit-fuzzy>=0.5.0",

    # Memory & Storage
    "qdrant-client>=1.8.0",

    # Utilities
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "networkx>=3.2.0",
    "redis>=5.0.0",
    "Pillow>=10.0.0",

    # API
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
gpu = [
    "deepspeed>=0.14.0",
    "chromadb>=0.4.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
hbllm = "hbllm.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["hbllm*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
