[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hbllm"
version = "1.0.0"
description = "HBLLM Core — Human Brain LLM cognitive architecture"
requires-python = ">=3.11"
license = {text = "GPL-3.0-only"}
authors = [
    {name = "HBLLM Team"},
]
readme = "README.md"

dependencies = [
    # Data
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    "zstandard>=0.22.0",

    # Memory & Storage
    "qdrant-client>=1.8.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.5",
    "aiosqlite>=0.20.0",

    # Utilities
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "networkx>=3.2.0",
    "redis>=5.0.0",
    "Pillow>=10.0.0",
    "orjson>=3.9.0",
    "uvloop>=0.19.0; sys_platform != 'win32'",

    # API
    "fastapi>=0.110.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.27.0",
    "websockets>=12.0",          # WebSocket support for uvicorn
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
]

[project.urls]
Homepage = "https://github.com/hbllm/hbllm"
Documentation = "https://docs.hbllm.dev"
Repository = "https://github.com/hbllm/hbllm"
Changelog = "https://github.com/hbllm/hbllm/blob/main/CHANGELOG.md"

[project.optional-dependencies]
local = [
    # Core ML — only needed for local model loading
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "onnxruntime>=1.17.0",
    "huggingface-hub>=0.22.0",
    "datasets>=2.18.0",
    "tokenizers>=0.15.0",
    "safetensors>=0.4.0",
    # Reasoning engines
    "z3-solver>=4.12.0",
    "scikit-fuzzy>=0.5.0",
    # Training
    "wandb>=0.16.0",
    "accelerate>=0.28.0",
]
gpu = [
    "hbllm[local]",
    "deepspeed>=0.14.0",
    "chromadb>=0.4.0",
]
embodiment = [
    "aiortc>=1.8.0",
]
voice = [
    # Real-time voice pipeline
    "kokoro>=0.9.0",            # Kokoro TTS engine (~300MB model)
    "misaki>=0.8.0",            # Phonemizer backend for Kokoro
    "useful-moonshine-onnx>=0.2.0", # Moonshine ONNX ASR (~50MB, <100ms latency)
    "soundfile>=0.12.0",        # WAV I/O for audio processing
    "silero-vad>=5.1.0",        # Voice activity detection (~2MB)
    "resemblyzer>=0.1.4",       # Speaker identification via GE2E embeddings (~50MB)
]
voice-premium = [
    "hbllm[voice]",
    "orpheus-speech>=0.1.0",    # Orpheus TTS (Llama-based, emotional)
]
observability = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
]
full = [
    "hbllm[local]",
    "hbllm[gpu]",
    "hbllm[embodiment]",
    "hbllm[observability]",
    "hbllm[voice]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "websockets>=12.0",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.8.0",
    "tiktoken>=0.6.0",
]
ros = [
    "rclpy",
]

[project.scripts]
hbllm = "hbllm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hbllm*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "E402", "N802", "N803", "N806", "N812", "N814", "UP041", "UP042", "UP017", "E741", "F811"]

[tool.ruff.lint.isort]
known-first-party = ["hbllm"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"plugins/**/*.py" = ["N999"]

[tool.pytest.ini_options]
testpaths = ["tests", "plugins"]
asyncio_mode = "auto"
timeout = 300
timeout_method = "thread"
addopts = "--ignore=plugins/hbllm_telegram --ignore=plugins/hbllm_terminal"
markers = [
    "unit: Unit tests (single component, fast)",
    "integration: Integration tests (multi-component)",
    "e2e: End-to-end tests (full pipeline)",
    "ml: ML-dependent tests requiring PyTorch",
]
filterwarnings = [
    "ignore:The PyTorch API of nested tensors is in prototype stage:UserWarning",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["plugins/"]
disable_error_code = [
    "assignment", "call-arg", "attr-defined", "import-untyped", 
    "misc", "var-annotated", "index", "dict-item", "override", 
    "operator", "valid-type", "union-attr"
]
