[package]
name = "hbllm_concept_extract"
version = "0.1.0"
edition = "2021"
description = "High-performance keyword extraction and clustering for HBLLM concept mining."

[lib]
name = "hbllm_concept_extract"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module", "abi3-py311"] }
regex = "1"
rayon = "1.8.0"
