[package]
name = "hbllm_confidence"
version = "0.1.0"
edition = "2021"
description = "High-performance confidence estimation for HBLLM responses."

[lib]
name = "hbllm_confidence"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module", "abi3-py311"] }
regex = "1"
