[package]
name = "hbllm-data-tools"
version = "0.1.0"
edition = "2021"
description = "High-performance data processing tools for HBLLM"

[lib]
name = "hbllm_data_tools_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
rayon = "1.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
unicode-segmentation = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

