[package]
name = "hbllm_knowledge_graph"
version = "0.1.0"
edition = "2021"
description = "High-performance graph algorithms for HBLLM knowledge graph."

[lib]
name = "hbllm_knowledge_graph"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module", "abi3-py311"] }
rayon = "1.8.0"
