[package]
name = "hbllm_policy_eval"
version = "0.1.0"
edition = "2021"
description = "High-performance policy regex evaluation for HBLLM governance."

[lib]
name = "hbllm_policy_eval"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module", "abi3-py311"] }
regex = "1"
