[package]
name = "hbllm-tokenizer"
version = "0.1.0"
edition = "2021"
description = "Custom byte-level BPE tokenizer for HBLLM"

[lib]
name = "hbllm_tokenizer_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-segmentation = "1.10"
rayon = "1.8"

